--- a/media/html/index.marked.html
+++ b/media/html/index.marked.html
@@ -117,7 +117,8 @@
                         </div>
                     </div>
                 </div>
-
+                <ul id="suggestions" class="suggestions" hidden=""></ul>
+                </ul>
             </div>
         </div>
     </div>
