feat: 启动页面添加指令

--- a/media/html/index.marked.html
+++ b/media/html/index.marked.html
@@ -36,22 +36,22 @@
                     <div class="user">嗨，@Code Maestro! <br />有什么可以帮你的</div>
                     <div class="ask">我是你的 AI 编程助手，使用快捷键<span class="label-1">⌘</span> <span
                             class="label-3">I</span>&nbsp;&nbsp;来与我对话吧！</div>
-                    <div class="instruction">
+                    <div class="instruction" data-command="">
                         <div class="label"><img class="icon" src="{{imgUri}}/dark-icon.svg"><span
                                 class="command-button">智能代码生成器</span></div>
                         <div class="text">轻松将你的想法转化为高质量代码</div>
                     </div>
-                    <div class="instruction">
+                    <div class="instruction" data-command="explain">
                         <div class="label"><img class="icon" src="{{imgUri}}/dark-icon.svg"><span
                                 class="command-button">代码解析专家</span></div>
                         <div class="text">/explain 深入剖析函数功能，助你快速理解代码</div>
                     </div>
-                    <div class="instruction">
+                    <div class="instruction" data-command="docstring">
                         <div class="label"><img class="icon" src="{{imgUri}}/dark-icon.svg"><span
                                 class="command-button">智能注释助手</span></div>
                         <div class="text">/docstring 一键生成清晰、专业的代码注释</div>
                     </div>
-                    <div class="instruction">
+                    <div class="instruction" data-command="test">
                         <div class="label"><img class="icon" src="{{imgUri}}/dark-icon.svg"><span
                                 class="command-button">生成单测</span></div>
                         <div class="text">/test 为这段选中的函数生成单测</div>
